Fixed notification overflow

--- a/notification_styles.css
+++ b/notification_styles.css
@@ -40,6 +40,7 @@
 	flex-direction: column;
 	flex-grow: 1;
 	margin: 8px;
+	width: 0px;
 }
 .notificationtitle{
 	font-size: 160%;
